@@ -12,6 +12,9 @@ What's New in Python 3.2 Alpha 2?
 Core and Builtins
 -----------------
 
+- Issue #8202: sys.argv[0] is now set to '-m' instead of '-c' when searching
+  for the module file to be executed with the -m command  line option.
+
 - Issue #9599: Create PySys_FormatStdout() and PySys_FormatStderr() functions
   to write a message formatted by PyUnicode_FromFormatV() to sys.stdout and
   sys.stderr.
